[refactor]: rename menu to name to be consistent with the models
